# YCast

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  bootstrap.sh  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
examples/: ycast.service.example_root  ycast.service.example_ycast
ycast/: __init__.py  __main__.py  generic.py  my_filter.py  my_recent_station.py  my_stations.py  radiobrowser.py  server.py  station_icons.py  test_ycast.py  vtuner.py
